# universal-workflow-system

./: .env.example  .env.mcp.example  .gitignore  .mcp.json  BOARD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FRAMEWORK_COMPARISON.md  LICENSE  NOTIFICATIONS.md  README.md  TEST_COVERAGE_REPORT.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.workflow/: config.yaml  handoff.md  state.yaml
antigravity-integration/: install.sh
artifacts/: comparative_datasets.bib  comparative_datasets_analysis.md  datasets_executive_summary.md  framework_comparison_design.md  promise_2026_critical_review.md  promise_2026_review_post_component_study.md
claude-code-integration/: GETTING_STARTED.md  README.md  install.sh  uninstall.sh
code_review/: README.md  SUMMARY.md  review_report.md  suggested_fixes.md  type_safety_analysis.md
company_os/: mock_server.py
dashboard/: app.js  index.html  style.css
docs/: SDLC_SUMMARY.md  comparison_matrix.md  index.html  references.bib  state-schema.md  uws-vector-memory-integration-plan.md
examples/: README.md
migrations/: 001_create_event_store.sql  002_create_auth_tables.sql  003_create_memory_tables.sql  004_create_read_models.sql
paper/: main-promise.tex  main.tex  references.bib
replication/: Dockerfile  requirements.txt  run_benchmarks.sh
research/: README.md
scripts/: activate_agent.sh  checkpoint.sh  dashboard_server.py  detect_and_configure.sh  enable_skill.sh  init_workflow.sh  pm.sh  (+12 more)
(+371 files in other folders)
