[project]
name = "company-os"
version = "0.1.0"
description = "AI-Native Adaptive Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System/E2E tests",
    "slow: Slow running tests"
]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
exclude = ["migrations/", ".git/", "__pycache__/"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    migrations
    | __pycache__
    | \.git
)/
'''
